--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,26 @@
 {% extends "base.html" %}
 {% block content %}
-<p> This is index page. </p>
+<table class="table table-striped table-bordered table-condensed">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Upvotes</th>
+      <th>Downvotes</th>
+    </tr>
+  </thead>
+  {% for book in books %}
+  <tr>
+    <th> {{ book.title }} </th>
+    <th> 
+      {% for author in book.author.all %}
+       {{ author.name }} 
+      {% endfor %}
+    </th>
+    <th> {{ book.number_of_upvotes }} </th>
+    <th> {{ book.number_of_downvotes }} </th>
+  </tr>
+  {% endfor %}
+
+</table>
 {% endblock content %}
