--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <table class="table table-striped table-bordered table-condensed">
   <thead>
     <tr>
+      <th>S. No.</th>
       <th>Title</th>
       <th>Author</th>
       <th>Upvotes</th>
@@ -11,14 +12,16 @@
   </thead>
   {% for book in books %}
   <tr>
-    <th> {{ book.title }} </th>
-    <th> 
-      {% for author in book.author.all %}
+    
+    <td> {{ book.id }} </td>
+    <td> <a href="{{ book.get_absolute_url }}"> {{ book.title }} </a> </td>
+    <td>
+    {% for author in book.author.all %}
        {{ author.name }} 
       {% endfor %}
-    </th>
-    <th> {{ book.number_of_upvotes }} </th>
-    <th> {{ book.number_of_downvotes }} </th>
+    </td>
+    <td> {{ book.number_of_upvotes }} </td>
+    <td> {{ book.number_of_downvotes }} </td>
   </tr>
   {% endfor %}
 
