--- a/templates/base.html
+++ b/templates/base.html
@@ -15,16 +15,45 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}ico/apple-touch-icon-57-precomposed.png">
     {% endblock style %}
+  <script src="{{ STATIC_URL }}js/jquery.js"></script>
   </head>
 
   <body>
+    <div class="navbar">
+      <div class="navbar-inner">
+        <div class="container">
+          <!-- Be sure to leave the brand out there if you want it shown -->
+          <a class="brand" href="/">Agibrary</a>
+          
+          <!-- Everything you want hidden at 940px or less, place within here -->
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/about/">About</a></li>
+              <li><a href="http://agiliq.com">Agiliq.com</a></li>
+            <li class="divider-vertical"></li>
+            {% if user.is_authenticated %}
+            <li><a href="/libdetails/">Library Details</a></li>
+            <li><a href="/request/detail/">Book Requests</a></li>
+            <li><a href="/accounts/logout/">Logout</a></li>
+            {% else %}
+            <li><a href="/accounts/login/">Login</a></li>
+            {% endif %}
+            </ul>
+            <!-- .nav, .navbar-search, .navbar-form, etc -->
+          </div>
+          
+        </div>
+      </div>
+    </div>
+
+
     <div class="container">
       {% block content %}
       {% endblock content %}
     </div>
   </body>
 
-  <script src="{{ STATIC_URL }}js/jquery.js"></script>
   <script src="{{ STATIC_URL }}js/bootstrap-transition.js"></script>
   <script src="{{ STATIC_URL }}js/bootstrap-alert.js"></script>
   <script src="{{ STATIC_URL }}js/bootstrap-modal.js"></script>
