--- a/templates/filter.html
+++ b/templates/filter.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<p> Here </p>
+
 <table class="table table-striped table-bordered table-condensed">
   <thead>
     <tr>
@@ -27,4 +29,5 @@
   {% endfor %}
 
 </table>
-{% endblock content %}
+
+{% endblock %}
