--- a/templates/detail.html
+++ b/templates/detail.html
@@ -9,11 +9,19 @@
   {% if user.is_authenticated %}
   <a id="voteup" class="btn btn-success" href="#">Vote Up</a> &nbsp;
   <a id="votedown" class="btn btn-danger" href="#">Vote Down</a> &nbsp;
-  <a id="issue" class="btn btn-action" href="#">Issue</a> &nbsp;
+  {% if not book.status %}
+  {% if user == trans.usr %}
   <a id="return" class="btn btn-inverse" href="#">Return</a>
+  {% else %}
+  <span class="action"> Book Currently with {{ trans.usr }} </span>
+  {% endif %}
+  {% else %}
+  <a id="issue" class="btn btn-action" href="#">Issue</a> &nbsp;
+  {% endif %}
   {% endif %}
   <br><br><br>
 </div>
+
 
 <table class="table table-striped table-bordered">
   <tr><td>Title:</td><td>{{ book.title }}</td></tr>
@@ -34,7 +42,7 @@
     <td>
       {% url detail "publisher" book.publisher.id as pub_detail_url %}
       <a href="{{ pub_detail_url}}">{{ book.publisher }}</a>
-     </td>
+    </td>
   </tr>
   <tr>
     <td> Read By: </td>
